Changed quiz button padding to stop text wrap https://trello.com/c/58HeTi6k/188-padding-causing-these-to-wrap-on-to-two-lines

--- a/site/src/sass/components/_feature-block-quiz.scss
+++ b/site/src/sass/components/_feature-block-quiz.scss
@@ -29,7 +29,7 @@
 	&-button {
 		width: 100%;
 		min-height: 50px;
-		padding: 0px 50px;
+		padding: 0px 10px;
     background: #fff;
 		color: $primary-text-color;
     border: 2px solid $primary-text-color;
