--- a/site/web/resources/css/main.css
+++ b/site/web/resources/css/main.css
@@ -9759,7 +9759,7 @@ a.module-theme-6 {
 .feature-block-quiz-button {
   width: 100%;
   min-height: 50px;
-  padding: 0px 50px;
+  padding: 0px 10px;
   background: #fff;
   color: #333;
   border: 2px solid #333;
